--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@types/lodash": "^4.17.16",
     "@types/react-window": "^1.8.8",
+    "chart.js": "^4.5.0",
     "country-codes-list": "^2.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "next": "15.3.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.56.0",
